--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,4 +25,4 @@
           .yield.flex
             =notifications_tag
             =yield
-          #legals="Ekylibre "+Ekylibre.version+" - Ruby on Rails "+Rails.version
+          #legals="Ekylibre "+Ekylibre.version+" - Ruby on Rails "+Rails.version+" - Ruby #{RUBY_VERSION} - "+ActiveRecord::Base.connection.adapter_name+" - "+ActiveRecord::Migrator.current_version.to_s
