--- a/app/views/production/land_parcels.html.haml
+++ b/app/views/production/land_parcels.html.haml
@@ -13,11 +13,13 @@
   -for group in @current_company.land_parcel_groups
     .group
       %h2=group.name
-      -total_area = group.area
       %table.treemap
         %tr
-          -for land_parcel in group.land_parcels_on(session[:viewed_on])
-            %td.plot{:style=>"width: #{100*land_parcel.area/total_area}%;", :class=>cycle("odd", "even"), :onclick=>"toggleLandParcel(this, 'land_parcel_#{land_parcel.id}')"}
+          -land_parcels = group.land_parcels_on(session[:viewed_on])
+          -unit = land_parcels[0] ? land_parcels[0].area_unit : nil
+          -total_area = group.area(session[:viewed_on], unit)
+          -for land_parcel in land_parcels
+            %td.plot{:style=>"width: #{100*land_parcel.area(unit)/total_area}%;", :class=>cycle("odd", "even"), :onclick=>"toggleLandParcel(this, 'land_parcel_#{land_parcel.id}')"}
               =hidden_field_tag("land_parcel[#{land_parcel.id}]", "0", :id=>"land_parcel_#{land_parcel.id}")
               .bmenu
                 =link_to(land_parcel.name, {:action=>:land_parcel, :id=>land_parcel.id}, :class=>:name)
