--- a/app/views/production/land_parcels.html.haml
+++ b/app/views/production/land_parcels.html.haml
@@ -9,15 +9,17 @@
 =toolbar do
   -link :land_parcel_create
 
+
+-unit = Unit.find_by_base("m2")
 =form_tag do
   -for group in @current_company.land_parcel_groups
+    -total_area = group.area(session[:viewed_on], unit)
     .group
       %h2=group.name
+      -next if total_area.zero?
       %table.treemap
         %tr
           -land_parcels = group.land_parcels_on(session[:viewed_on])
-          -unit = land_parcels[0] ? land_parcels[0].area_unit : nil
-          -total_area = group.area(session[:viewed_on], unit)
           -for land_parcel in land_parcels
             %td.plot{:style=>"width: #{100*land_parcel.area(unit).to_f/total_area}%;", :class=>cycle("odd", "even"), :onclick=>"toggleLandParcel(this, 'land_parcel_#{land_parcel.id}')"}
               =hidden_field_tag("land_parcel[#{land_parcel.id}]", "0", :id=>"land_parcel_#{land_parcel.id}")
