--- a/app/views/help/show.html.haml
+++ b/app/views/help/show.html.haml
@@ -1,13 +1,12 @@
--article = search
+=render :partial=>"search_form"
+
+-article = @help
 -update, complete, resize = "help", "resize2(); return true", nil
--if params[:dialog]
-  -update, complete, resize = "#{params[:dialog]}-help", "$('#{params[:dialog]}').resize()", params[:dialog]
 -base_url = {:controller=>:help}
--base_url[:dialog] = params[:dialog] if params[:dialog]
 -cache(:controller=>:help, :action=>:show, :locale=>::I18n.locale, :id=>article) do
   .content.flex{:style=>'overflow:auto;'}
     -if article.is_a? String
-      =article(article, :update=>update, :complete=>complete, :url=>base_url.merge(:action=>:show))
+      =article(article, :update=>update, :complete=>complete, :url=>base_url.merge(:action=>:show), :without_title=>true)
     -else
       %h1=tc("missing_help")
       .help-error=tc(:error_no_file, :article=>article.to_s)
