--- a/app/assets/themes/tekyla/stylesheets/screen.css
+++ b/app/assets/themes/tekyla/stylesheets/screen.css
@@ -1,4 +1,4 @@
-* {margin:0; padding:0; font-family: Ubuntu, Arial, "Liberation Sans", sans-serif;}
+* {margin:0; padding:0; font-family: "Liberation Sans", sans-serif;}
 html { background: #F1F1F1;/*background: #C9D7F1;*/}
 fieldset { border:1px solid #95b0e4; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; behavior: url(/pie.htc); padding:  8px 0px 0px; margin: 1px 1px 8px; background: url(../images/columns.png) repeat-x top; }
 fieldset legend { padding: 0 4px;  margin: 0 4px; color: #047; font-size: 15px; font-weight: bold;}
